# setbreak

./: .gitignore  ANALYZER.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  check_progress.sh  deep-dive-analysis.md  finish_analyze.sh  overnight_analyze.sh  overnight_analyze_11pm.sh  overnight_cron.sh  prek.toml  run_analysis.sh
docs/: FORK_GUIDE.md  rust-patterns.md
src/: bands.rs  calibrate.rs  chains.rs  chroma.rs  config.rs  discovery.rs  lib.rs  main.rs  score_lab.rs  segues.rs  similarity.rs
src/analyzer/: boundary.rs  decode.rs  features.rs  jam_metrics.rs  mod.rs
src/db/: columns.rs  mod.rs  models.rs  queries.rs
src/scanner/: classify.rs  filename.rs  metadata.rs  mod.rs
src/setlist/: import.rs  mod.rs  phishin.rs
